Reset sources for azure-containers-containerregistry to the release version 1.2.21.